@@ -1,3 +1,8 @@
+2006-10-19  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/chm_common.h: Add R_cholmod_start to initialize cholmod to
+	use Rprintf and R's error handling.
+
 2006-10-17  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/diagMatrix.R (%*%): rep(*, each = .) in Matrix %*% diagonal.
